<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/tuner_scene">

    <TextView
        android:id="@+id/instrument_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minHeight="@dimen/min_item_height"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Guitar (Standard)" />

    <TextView
        android:id="@+id/middlea_freq_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:minHeight="@dimen/min_item_height"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="A4=440Hz" />

    <TextView
        android:id="@+id/recent_freq_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorDisabled"
        app:layout_constraintBottom_toTopOf="@id/tuner_meter_view"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/blank_freq" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/meter_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/meter_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/note_top_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/note_bottom_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <tech.ajsf.instrutune.features.tuner.view.TunerMeter
        android:id="@+id/tuner_meter_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@id/meter_bottom_guideline"
        app:layout_constraintTop_toTopOf="@id/meter_top_guideline" />

    <tech.ajsf.instrutune.common.view.StringsView
        android:id="@+id/strings_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        />

    <tech.ajsf.instrutune.features.tuner.view.LeftChevron
        android:id="@+id/chevron_left_three"
        style="@style/ChevronStyle" />

    <tech.ajsf.instrutune.features.tuner.view.LeftChevron
        android:id="@+id/chevron_left_two"
        style="@style/ChevronStyle" />

    <tech.ajsf.instrutune.features.tuner.view.LeftChevron
        android:id="@+id/chevron_left_one"
        style="@style/ChevronStyle" />

    <TextView
        android:id="@+id/note_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="4dp"
        android:maxLines="1"
        android:minWidth="64dp"
        android:textSize="@dimen/note_text_size"
        tools:text="A" />

    <tech.ajsf.instrutune.features.tuner.view.RightChevron
        android:id="@+id/chevron_right_one"
        style="@style/ChevronStyle" />

    <tech.ajsf.instrutune.features.tuner.view.RightChevron
        android:id="@+id/chevron_right_two"
        style="@style/ChevronStyle" />

    <tech.ajsf.instrutune.features.tuner.view.RightChevron
        android:id="@+id/chevron_right_three"
        style="@style/ChevronStyle" />

    <Button
        android:id="@+id/mode_button"
        style="@style/BuilderButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="@dimen/min_item_height"
        android:padding="0dp"
        android:text="@string/instrument_mode"
        android:textColor="@color/primaryLightColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent=".6" />

</androidx.constraintlayout.motion.widget.MotionLayout>